# CodeFiles

./: .gitignore  README.md
Gym/: Gym.xlsx  Progress.m
Highlander racing/: Extract_tire_data.m  Lab6_damping.m  RideModel.mlapp  editer.m  fitter.m  fortnite.m  fortniteV2.m  fortniteV2Sim.slx  fortniteV2Sim.slxc  fortnite_DampPlot.m  lab.m  load1.m  midtermME226.m  ode46.m  organizer.m  springs.asv  springs.m  steeringTorque.asv  steeringTorque.m  test.m  test1.m  untitled.slx
M118/project/: Project_Q2.m  Project_Q3.m  Project_Q4.m  Project_Q5.m
ME120/Hw1/: question2.m
ME121/: compute_transfer_function.m  week3.slx
ME135/: ACsystem.slx  Houston.xlsx  Main.m  OutSideData.xlsx  Testing.slx
ME170A/lab 3/: Lab3Stub.m  computeMachNumber.m  myBisection.m  taylorcosine.m  tests.m
ME170A/lab 4/: Lab4Answers.mat  Lab4Stub.m  addarray.m  areMatrixEqual.m  computeDeterminant.m  forloop.m  froot.m  lab.m
ME170A/lab 5/: computeCofactor.m  solveLinearEquations.m
ME170A/lab 6/: Lab6Stub.m  backSubstitution.m  computeForcesInTruss.m  forwardSubstitution.asv  forwardSubstitution.m  gaussElimination.m  gaussianElimination.m  luDecomposition.m  myInverse.m  solveLinearSystem.m
ME170A/lab 7/: datanots.m  lagrangeInterpolation.m  linearSpline.m  myPolyFit.m  myhistogram.m  practice.m
ME18B/: project.m
School/ME597/lab1/26/task_2_interfaces/: CMakeLists.txt  package.xml
School/ME597/lab1/26/task_2_interfaces/srv/: JointState.srv
Senior Design/: Model_sim.slx  Model_sim.slxc  QuarterCarModel.m  Skratch.m  SkyHookModel_sim.slxc
ServerWork/: package-lock.json
(+2964 files in other folders)
